# encarta

./: .gitignore  CMakeLists.txt  README.md
fif_test/: AAA.FTT  picon_000.ftc  picon_001.ftc  picon_002.ftc  picon_003.ftc  picon_004.ftc  test1.fif
tools/: CMakeLists.txt
tools/datdump/: CMakeLists.txt  datdump.c
tools/fifdecode/: CMakeLists.txt  fifdecode.c  fifdecode.h
tools/ftcdecode/: CMakeLists.txt  ftcdecode.c  ftcdecode.h  ftcprobe.c
tools/m20dump/: CMakeLists.txt  m20dump.c  m20format.h
tools/spamdump/: CMakeLists.txt  spamdump.c
tools/strdump/: CMakeLists.txt  strdump.c
